Issue #3842: added visible border to currently focused element
only in highcontrast skin

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Default.css
@@ -20,6 +20,15 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
 
 @media screen,projection,tv,handheld {
 
+*:focus {
+    border: black 2px dashed !important;
+}
+
+th *:focus,
+#ToolBar *:focus {
+    border: white 2px dashed !important;
+}
+
 /**
  * @subsection  Fonts
  */
